--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.3.1",
     "clsx": "^2.0.0",
+    "framer-motion": "^5.6.0",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
     "react": "^18",
