--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.6.0",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -24,6 +24,7 @@
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "framer-motion": "^5.6.0",
+    "howler": "^2.2.4",
     "lucide-react": "^0.292.0",
     "next": "^14.0.2",
     "next-auth": "^4.24.5",
